src/snapshots/purring_lib__parser__tests__minimal_h.snap
---
source: src/parser.rs
expression: "p_module(r\"\nmodule H () where\n\nh = H { tag, attr, children }\n\nh  =HH\n        \")"
---
21 of 21
===
Module
 Header
  QProperName
   NULL
   ProperName
    (1, 7)->(1, 8)
  Decl::Def
   Name
    (3, 0)->(3, 1)
   GuardedExpr::Unconditional
    Expr::App
     Expr::Constructor
      QProperName
       NULL
       ProperName
        (3, 4)->(3, 5)
     Expr::Record
      (3, 6)->(3, 7)
       RecordLabelExpr::Pun
        Name
         (3, 8)->(3, 11)
       RecordLabelExpr::Pun
        Name
         (3, 13)->(3, 17)
       RecordLabelExpr::Pun
        Name
         (3, 19)->(3, 27)
      (5, 0)->(5, 1)
  Decl::Def
   Name
    (5, 0)->(5, 1)
   GuardedExpr::Unconditional
    Expr::Constructor
     QProperName
      NULL
      ProperName
       (5, 4)->(5, 6)
===
