src/snapshots/purring_lib__parser__tests__qualified_do.snap
---
source: src/parser.rs
expression: "p_expr(r\" A.B.do\n                    foo bar\n            \")"
---
13 of 13
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 11)
  Decl::Def
   Name
    (2, 0)->(2, 1)
   GuardedExpr::Unconditional
    Expr::Do
     Qual
      (2, 5)->(2, 9)
      DoStmt::Stmt
       NULL
       Expr::App
        Expr::Ident
         QName
          NULL
          Name
           (3, 20)->(3, 23)
        Expr::Ident
         QName
          NULL
          Name
           (3, 24)->(3, 27)
===
