src/snapshots/purring_lib__parser__tests__typ_b_signature.snap
---
source: src/parser.rs
expression: "p_typ(\"forall a b . Foo a b => Bar a b => b -> b\")"
---
22 of 22
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Forall
     TypVarBinding
      Name
       (2, 12)->(2, 13)
      NULL
     TypVarBinding
      Name
       (2, 14)->(2, 15)
      NULL
    Typ::Constrained
     Constraint
      QProperName
       NULL
       ProperName
        (2, 18)->(2, 21)
       Typ::Var
        Name
         (2, 22)->(2, 23)
       Typ::Var
        Name
         (2, 24)->(2, 25)
     Typ::Constrained
      Constraint
       QProperName
        NULL
        ProperName
         (2, 29)->(2, 32)
        Typ::Var
         Name
          (2, 33)->(2, 34)
        Typ::Var
         Name
          (2, 35)->(2, 36)
      Typ::Arr
       Typ::Var
        Name
         (2, 40)->(2, 41)
       Typ::Var
        Name
         (2, 45)->(2, 46)
===
