src/snapshots/purring_lib__parser__tests__typ_empty_row.snap
---
source: src/parser.rs
expression: "p_typ(\"()\")"
---
9 of 9
===
Module
 Header
  QProperName
   NULL
   ProperName
    (0, 7)->(0, 10)
  Decl::Sig
   Name
    (2, 0)->(2, 1)
   Typ::Row
    (2, 0)->(2, 6)
     Row
      NULL
===
